Fix inline code highlight color not showing up

--- a/src/components/scss/_typography.scss
+++ b/src/components/scss/_typography.scss
@@ -48,11 +48,9 @@ html, body{
 /*
    INLINE CODE
    ========================================================================== */
-p{
-  code{
-    font-family:"Lucida Console", Monaco, monospace !important;
-    color:$teal;
-  }
+code{
+  font-family:"Lucida Console", Monaco, monospace !important;
+  color:$teal;
 }
 
 /*
